--- a/htmlweb.html
+++ b/htmlweb.html
@@ -3,6 +3,7 @@
 <HEAD>
 <title>Natación</title>
 <meta name="Description" content="Información,consejos,etc de natación.Disponemos de un listado de centros donde realizar este tipo de entrenamiento físico y consejos de salud">
+<meta charset="UTF-8">
 </head>
 <body>
 <h1>Practica natación</h1>
