--- a/htmlweb.html
+++ b/htmlweb.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<HTML>
-<HEAD>
+<html>
+<head>
 <title>Natación</title>
 <meta name="Description" content="Información,consejos,etc de natación.Disponemos de un listado de centros donde realizar este tipo de entrenamiento físico y consejos de salud">
 <meta charset="UTF-8">
