--- a/htmlweb.html
+++ b/htmlweb.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Natación</title>
-<meta name="Description" content="Información,consejos,etc de natación.Disponemos de un listado de centros donde realizar este tipo de entrenamiento físico y consejos de salud">
+<meta name="description" content="Información,consejos,etc de natación.Disponemos de un listado de centros donde realizar este tipo de entrenamiento físico y consejos de salud">
 <meta charset="UTF-8">
 </head>
 <body>
