--- a/htmlweb.html
+++ b/htmlweb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="es">
 <head>
 <title>Natación</title>
 <meta name="description" content="Información,consejos,etc de natación.Disponemos de un listado de centros donde realizar este tipo de entrenamiento físico y consejos de salud">
