--- a/htmlweb.html
+++ b/htmlweb.html
@@ -1,3 +1,19 @@
+<!DOCTYPE HTML>
+<html lang="es">
+<head>
+<title>Natación</title>
+<meta name="description" content="Información,consejos,etc de natación.Disponemos de un listado de centros donde realizar este tipo de entrenamiento físico y consejos de salud">
+<meta charset="UTF-8">
+</head>
+<body>
+<h1>Practica natación</h1>
+<p>Natación es un deporte en el que se trabajan todos los músculos, se considera uno de los entrenamientos más completos y saludables, además de ser un deporte perfecto 
+para solucionar algunos problemas de salud. 
+Existen varias técnicas de natación para realizar los entrenos correspondientes y ejercitar los músculos, cada técnica y estilo son adaptables a la condición física
+de cada persona.</p>
+<h2>Fuentes para más información sobre este deporte:</h2>
+<ol>
+<li><a href="https://guiafitness.com/deportes/natacion">Guia fitness deporte natación</a></li>
 <li><a href="https://es.wikipedia.org/wiki/Nataci%C3%B3n">más información en Wikipedia</a></li>
 </ol>
 <h2>Estilos</h2>
